/*
 * $Id: ChangeLog,v 1.1162 2013-09-30 02:04:14 fyurisich Exp $
 */
/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2013-09-29 23:04 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * doc/classes.txt
     * Updated.

2013-09-29 20:02 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * ./Changelog
     * Previous entry corrected.
   * include/i_altsyntax.ch
   * include/i_xbrowse.ch
   * source/h_xbrowse.prg
     ! The first row can't be deleted when it's the only one.
     + Method IsTableEmpty to class ooHGRecord: returns .T. when the
       data origin is empty.
     + Clause NOSHOWEMPTYROW: it hides the empty row of the XBrowse
       control when the data origin is empty. It needs that the data
       origin has IsTableEmpty method properly defined.

2013-09-28 13:25 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * include/i_hmg_compat.ch
   * include/i_altsyntax.ch
   * include/i_button.ch
   * include/i_image.ch
   * source/h_button.prg
   * source/h_image.prg
     + DIBSECTION clause to Button, ButtonCheck and ButtonEx controls.
     + NOTRANSPARENT, NO3DCOLORS and NODIBSECTION clauses to Image
       controls.
     ; This clauses improve image support.
   * source/h_print.prg
     ! Printer icon shows wrong background.
   * source/miniprint.prg
   * include/miniprint.ch
     ! Pages after 9999 are not shown in preview.
     + "Wait while closing" window.

2013-09-27 23:39 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   * source/h_grid.prg
     ! Current cell is not shown when scrolling a TGridByCell using
       the right arrow.
     ! The edition window of a TGridByCell acts "independently".
     ! Edit controls with inputmask behave oddly.

2013-09-25 20:11 UTC-0300 Fernando Yurisich <fyurisich@oohg.org>
   + source/c_gdiplus.c
     ! Compilation under xHarbour and BCC.
   * ./compile_bcc.bat